# SqliteIndices

./: CMakeLists.txt  allocations.c  main.c
